# agentic-research-analyst

./: .gitignore  PLAN.md  pyproject.toml  requirements.txt
scripts/: ingest_documents.py  run_agent.py
src/research_analyst/: agent.py  config.py  graph.py  state.py
src/research_analyst/nodes/: critic.py  formatter.py  planner.py  re_search_plan.py  synthesizer.py  tool_executor.py
src/research_analyst/tools/: finance_tool.py  rag_tool.py  web_search_tool.py
src/research_analyst/vectorstore/: embeddings.py  ingest.py  store.py
tests/: conftest.py  test_graph.py  test_nodes.py  test_tools.py
